--- a/app/src/main/res/layout/fragment_preferences.xml
+++ b/app/src/main/res/layout/fragment_preferences.xml
@@ -61,6 +61,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
             android:text="Cafe"
+            android:gravity="center"
             android:textColor="@color/black"
             android:textSize="20sp"/>
 
