--- a/app/src/main/res/layout/fragment_wish_list.xml
+++ b/app/src/main/res/layout/fragment_wish_list.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".WishListFragment">
+    tools:context=".view.BottomNavigation.WishListFragment">
 
 
     <TextView
@@ -32,6 +32,7 @@
         tools:layout_editor_absoluteX="0dp" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_wishList"
         android:layout_width="346dp"
         android:layout_height="550dp"
         android:layout_marginStart="32dp"
