--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,22 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/page_1"
+        android:id="@+id/navigation_home"
         android:enabled="true"
         android:icon="@drawable/baseline_home_24"
         android:title="Home"/>
     <item
-        android:id="@+id/page_2"
+        android:id="@+id/navigation_search"
         android:enabled="true"
         android:icon="@drawable/baseline_search_24"
         android:title="Search"/>
     <item
-        android:id="@+id/page_3"
+        android:id="@+id/navigation_wishlist"
         android:enabled="true"
         android:icon="@drawable/baseline_favorite_border_24"
         android:title="WishList"/>
     <item
-        android:id="@+id/page_4"
+        android:id="@+id/navigation_setting"
         android:enabled="true"
         android:icon="@drawable/baseline_settings_24"
         android:title="Setting" />
