--- a/app/src/main/res/layout/item_recommendation.xml
+++ b/app/src/main/res/layout/item_recommendation.xml
@@ -5,7 +5,7 @@
 
     android:id="@+id/recommendation_cardview"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_marginLeft="8dp"
     android:layout_marginTop="8dp"
@@ -14,17 +14,16 @@
     card_view:cardCornerRadius="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:layout_width="match_parent"
+        android:layout_height="374dp">
 
         <ImageView
             android:id="@+id/iv_recommendation"
-            android:layout_width="156dp"
-            android:layout_height="218dp"
+            android:layout_width="395dp"
+            android:layout_height="263dp"
             android:scaleType="centerCrop"
             card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintHorizontal_bias="0.187"
+            card_view:layout_constraintHorizontal_bias="0.297"
             card_view:layout_constraintLeft_toLeftOf="parent"
             card_view:layout_constraintRight_toRightOf="parent"
             card_view:layout_constraintTop_toTopOf="parent"
@@ -35,10 +34,11 @@
             android:id="@+id/place_recommendation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="Nama Tempat"
             android:textColor="@color/black"
-            android:textSize="8sp"
+            android:textSize="16sp"
             android:textStyle="bold"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toBottomOf="@+id/iv_recommendation" />
@@ -47,18 +47,20 @@
             android:id="@+id/address_recommendation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="4dp"
             android:text="Alamat"
             android:textColor="@color/black"
-            android:textSize="8sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toBottomOf="@+id/place_recommendation" />
 
         <ImageView
             android:id="@+id/iv_location_recommendation"
-            android:layout_width="7dp"
-            android:layout_height="15dp"
+            android:layout_width="17dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
             android:src="@drawable/baseline_location_on_24"
             card_view:layout_constraintStart_toStartOf="parent"
@@ -72,7 +74,7 @@
             android:layout_marginTop="8dp"
             android:text="16"
             android:textColor="#A4A4A4"
-            android:textSize="6sp"
+            android:textSize="12sp"
             android:textStyle="bold"
             card_view:layout_constraintStart_toEndOf="@+id/iv_location_recommendation"
             card_view:layout_constraintTop_toBottomOf="@+id/address_recommendation" />
@@ -85,7 +87,7 @@
             android:layout_marginTop="8dp"
             android:text="km"
             android:textColor="#A4A4A4"
-            android:textSize="6sp"
+            android:textSize="12sp"
             android:textStyle="bold"
             card_view:layout_constraintStart_toEndOf="@+id/distance_recommendation"
             card_view:layout_constraintTop_toBottomOf="@+id/address_recommendation" />
@@ -99,7 +101,7 @@
             android:layout_marginTop="8dp"
             android:text="16"
             android:textColor="#A4A4A4"
-            android:textSize="6sp"
+            android:textSize="12sp"
             android:textStyle="bold"
             card_view:layout_constraintStart_toEndOf="@+id/km_recommendation"
             card_view:layout_constraintTop_toBottomOf="@+id/address_recommendation" />
@@ -109,35 +111,34 @@
             android:id="@+id/minute_recommendation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="2dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="min"
             android:textColor="#A4A4A4"
-            android:textSize="6sp"
+            android:textSize="12sp"
             android:textStyle="bold"
             card_view:layout_constraintStart_toEndOf="@+id/estimasi_recommendation"
             card_view:layout_constraintTop_toBottomOf="@+id/address_recommendation" />
 
-
         <ImageView
             android:id="@+id/iv_rating_recommendation"
-            android:layout_width="7dp"
-            android:layout_height="15dp"
-            android:layout_marginTop="-4dp"
+            android:layout_width="17dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:src="@drawable/baseline_star_24"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toBottomOf="@+id/iv_location_recommendation" />
-
 
         <TextView
             android:id="@+id/rating_recommendation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="2dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:text="4.7"
             android:textColor="#A4A4A4"
-            android:textSize="6sp"
+            android:textSize="12sp"
             android:textStyle="bold"
             card_view:layout_constraintStart_toEndOf="@+id/iv_rating_recommendation"
             card_view:layout_constraintTop_toBottomOf="@+id/distance_recommendation" />
@@ -146,11 +147,11 @@
             android:id="@+id/total_rating_recommendation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="2dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
             android:text="(1000)"
             android:textColor="#A4A4A4"
-            android:textSize="6sp"
+            android:textSize="12sp"
             android:textStyle="bold"
             card_view:layout_constraintStart_toEndOf="@+id/rating_recommendation"
             card_view:layout_constraintTop_toBottomOf="@+id/estimasi_recommendation" />
