--- a/app/src/main/res/layout/item_row_wishlist.xml
+++ b/app/src/main/res/layout/item_row_wishlist.xml
@@ -16,7 +16,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:padding="16dp"
+        android:background="#F3FFFB">
 
         <ImageView
             android:id="@+id/iv_wishList"
