--- a/app/src/main/res/layout/item_row_reviews.xml
+++ b/app/src/main/res/layout/item_row_reviews.xml
@@ -31,8 +31,8 @@
 
         <ImageView
             android:id="@+id/iv_rating_review"
-            android:layout_width="21dp"
-            android:layout_height="18dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:src="@drawable/baseline_star_24"
@@ -47,7 +47,7 @@
             android:layout_marginTop="8dp"
             android:text="4"
             android:textColor="#59AD92"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/iv_rating_review"
             app:layout_constraintTop_toBottomOf="@+id/tv_nama_reviewer" />
