--- a/app/src/main/res/layout/item_row_wishlist.xml
+++ b/app/src/main/res/layout/item_row_wishlist.xml
@@ -5,7 +5,7 @@
     
     android:id="@+id/wishList_cardview"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_marginLeft="8dp"
     android:layout_marginTop="8dp"
@@ -21,36 +21,42 @@
 
         <ImageView
             android:id="@+id/iv_wishList"
-            android:layout_width="156dp"
-            android:layout_height="218dp"
+            android:layout_width="0dp"
+            android:layout_height="250dp"
             android:scaleType="centerCrop"
             card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintHorizontal_bias="0.012"
+            card_view:layout_constraintHorizontal_bias="0.727"
             card_view:layout_constraintLeft_toLeftOf="parent"
             card_view:layout_constraintRight_toRightOf="parent"
             card_view:layout_constraintTop_toTopOf="parent"
+            card_view:layout_constraintVertical_bias="0.0"
             tools:src="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/tv_spot_name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
-            android:layout_marginTop="80dp"
-            android:gravity="center"
+            android:layout_marginTop="8dp"
             android:text="@tools:sample/lorem"
-            card_view:layout_constraintStart_toEndOf="@+id/iv_wishList"
-            card_view:layout_constraintTop_toTopOf="parent" />
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@+id/iv_wishList" />
 
         <TextView
             android:id="@+id/tv_streetAddress"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
             android:layout_marginTop="8dp"
-            android:gravity="center"
             android:text="@tools:sample/lorem"
-            card_view:layout_constraintStart_toEndOf="@+id/iv_wishList"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="normal"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintHorizontal_bias="0.486"
+            card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toBottomOf="@+id/tv_spot_name" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
