--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -24,9 +24,9 @@
         tools:layout="@layout/fragment_wish_list" />
 
     <fragment
-        android:id="@+id/navigation_logout"
+        android:id="@+id/navigation_setting"
         android:name="com.rahman.nongki.view.main.LogoutFragment"
-        android:label="fragment_logout"
+        android:label="fragment_setting"
         tools:layout="@layout/fragment_logout" />
 
 
