--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,9 +13,9 @@
 
     <fragment
         android:id="@+id/navigation_search"
-        android:name="com.rahman.nongki.view.main.SearchPageFragment"
+        android:name="com.rahman.nongki.view.main.SearchFragment"
         android:label="fragment_search_page"
-        tools:layout="@layout/fragment_search_page" />
+        tools:layout="@layout/fragment_search" />
 
     <fragment
         android:id="@+id/navigation_wishlist"
