--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -123,7 +123,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="@string/usernameHint"
+                android:hint="@string/email"
                 android:inputType="textEmailAddress" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -198,7 +198,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="end"
                 android:text="@string/have_an_account"
-                android:textSize="11sp" />
+                android:textSize="12sp" />
 
             <TextView
                 android:id="@+id/tvLogin"
@@ -208,7 +208,7 @@
                 android:text="@string/link_to_sign_in"
                 android:layout_marginStart="10dp"
                 android:textColor="@color/teal_700"
-                android:textSize="11sp" />
+                android:textSize="12sp" />
 
         </LinearLayout>
 
